Refactor urls endpoints docs
