# docs/swagger.json
@@ -17,7 +17,7 @@
     "paths": {
         "/_/{shortCode}": {
             "get": {
-                "description": "Возвращает URL по короткому коду",
+                "description": "Редеректит на URL по короткому коду",
                 "consumes": [
                     "application/json"
                 ],
@@ -35,14 +35,14 @@
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "Успешное получение",
+                    "308": {
+                        "description": "Редирект",
                         "schema": {
                             "$ref": "#/definitions/api.Response"
                         }
                     },
                     "400": {
-                        "description": "Некорректные данные",
+                        "description": "Короткий код не найден",
                         "schema": {
                             "$ref": "#/definitions/api.Response"
                         }
@@ -131,14 +131,14 @@
         },
         "/api/clicks/{shortCode}": {
             "get": {
-                "description": "Возвращает количество кликов по URL",
+                "description": "Возвращает данные о кликах на URL (браузер, IP, язык браузера, источник перехода)",
                 "consumes": [
                     "application/json"
                 ],
                 "produces": [
                     "application/json"
                 ],
-                "summary": "Получить количество кликов по URL",
+                "summary": "Получить клики по URL",
                 "parameters": [
                     {
                         "type": "string",
@@ -151,12 +151,6 @@
                 "responses": {
                     "200": {
                         "description": "Успешное получение",
-                        "schema": {
-                            "$ref": "#/definitions/api.Response"
-                        }
-                    },
-                    "400": {
-                        "description": "Некорректные данные",
                         "schema": {
                             "$ref": "#/definitions/api.Response"
                         }
@@ -394,16 +388,10 @@
                 "produces": [
                     "application/json"
                 ],
-                "summary": "Получить список URL пользователем",
+                "summary": "Получить список URL пользователя",
                 "responses": {
                     "200": {
                         "description": "Успешное получение",
-                        "schema": {
-                            "$ref": "#/definitions/api.Response"
-                        }
-                    },
-                    "400": {
-                        "description": "Некорректные данные",
                         "schema": {
                             "$ref": "#/definitions/api.Response"
                         }
@@ -444,7 +432,7 @@
                         }
                     },
                     "400": {
-                        "description": "Некорректные данные",
+                        "description": "Короткий код занят",
                         "schema": {
                             "$ref": "#/definitions/api.Response"
                         }
@@ -485,7 +473,7 @@
                         }
                     },
                     "400": {
-                        "description": "Некорректные данные",
+                        "description": "Короткий код не найден",
                         "schema": {
                             "$ref": "#/definitions/api.Response"
                         }
